NAS-2384 Fixed some more tests